--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,14 @@ chrono-humanize = "0.2.1"
 crossbeam-channel = "0.5"
 log = "0.4.17"
 serde = "1.0.144"
-solana-bpf-loader-program =  "1.14.9"
-solana-logger = "1.14.9"
-solana-program-runtime = "1.14.9"
-solana-runtime = "1.14.9"
-solana-client = "1.14.9"
-solana-send-transaction-service = "1.14.9"
-solana-sdk = "1.14.9"
-solana-vote-program = "1.14.9"
+solana-bpf-loader-program =  "=1.14.9"
+solana-logger = "=1.14.9"
+solana-program-runtime = "=1.14.9"
+solana-runtime = "=1.14.9"
+solana-client = "=1.14.9"
+solana-send-transaction-service = "=1.14.9"
+solana-sdk = "=1.14.9"
+solana-vote-program = "=1.14.9"
 futures = "0.3.25"
 thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
